# culinary

./: .gitignore  manage.py  pyproject.toml
cooking/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
cooking/migrations/: 0001_initial.py  0002_alter_post_content.py  0003_alter_post_category_comment.py  0004_post_author.py
cooking/templates/cooking/: add_post.html  index.html  login_form.html  password_change_form.html  post_confirm_delete.html  post_detail.html  profile.html  user_register.html
cooking/templates/cooking/components/: category_buttons.html  posts_list.html
cooking/templatetags/: blog_tags.py
culinary/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/components/: _messages.html  navbar.html
